--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
   schedule:
-    # run every month to rebuild on the latest tag
+    # Build monthly
     - cron: '0 0 1 * *'
 
 jobs:
@@ -16,7 +16,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # variant: [0-ubuntu-22.04, 0-ubuntu, 0-debian, buster, bullseye]
         variant:
           - 0-ubuntu-22.04
     steps:
